--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ stages:
   - build
   - lint
   - push
-  - deploy
-  - cleanup
+#   - deploy
+#   - cleanup
 
 before_script:
   - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
