--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - lint
   - push
 #   - deploy
-#   - cleanup
+   - cleanup
 
 before_script:
   - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
@@ -25,7 +25,7 @@ lint:
   script:
    - export CI_PIPELINE_ID=$CI_PIPELINE_ID
    - export CI_BUILD_REF_NAME=$CI_BUILD_REF_NAME
-#   - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml run app flake8 .
+   - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml run app flake8 .
 
 push image:
   stage: push
@@ -52,8 +52,10 @@ push latest:
 #     - docker-compose -f docker-compose.deploy.yml down
 #     - docker-compose -f docker-compose.deploy.yml up -d
 
-# cleanup:
-#   stage: cleanup
-#   script:
-#     - docker rmi -f "$CI_PIPELINE_ID":"$CI_BUILD_REF_NAME"
-#     - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml down --remove-orphans
+# removing last image
+# if fail happens, not-finished image can remain, so we have to clen it up
+ cleanup:
+   stage: cleanup
+   script:
+     - docker rmi -f "$CI_PIPELINE_ID":"$CI_BUILD_REF_NAME"
+     - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml down --remove-orphans
