--- a/app/requirements.yml
+++ b/app/requirements.yml
@@ -9,4 +9,5 @@ dependencies:
     - flake8==3.5.0
     - django-cors-headers==2.2.0
     - django-countries==5.3
-    - djangorestframework-simplejwt==3.2.3
+    - djangorestframework-simplejwt==3.2.33
+    - django-extensions==2.0.7
