--- a/app/requirements.yml
+++ b/app/requirements.yml
@@ -11,3 +11,4 @@ dependencies:
     - django-countries==5.3
     - djangorestframework-simplejwt==3.2.33
     - django-extensions==2.0.7
+    - Pillow==5.1.0
