Add url to registration serializer, modify url pattern - add /backend/ before api/ and admin/ so to separate our future front-end from back-end.

--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -19,7 +19,10 @@ server {
     location /media/ {
         alias   /media-files/;
     }
-    location / { try_files $uri @app; }
+    location / {
+        alias   /frontend-build/;
+    }
+    location /backened { try_files $uri @app; }
     location @app {
         include uwsgi_params;
         uwsgi_pass app;
