--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ stages:
   - build
   - lint
   - push
+  - cleanup
 #   - deploy
-#   - cleanup
 
 before_script:
   - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" "$CI_REGISTRY"
@@ -18,14 +18,14 @@ pull:
 build:
   stage: build
   script:
-    - docker build --tag="$CI_PIPELINE_ID":"$CI_BUILD_REF_NAME" --cache-from="$CI_REGISTRY_IMAGE":latest --pull . 
+    - docker build --tag="$CI_PIPELINE_ID":"$CI_BUILD_REF_NAME" --cache-from="$CI_REGISTRY_IMAGE":latest --pull .
 
 lint:
   stage: lint
   script:
    - export CI_PIPELINE_ID=$CI_PIPELINE_ID
    - export CI_BUILD_REF_NAME=$CI_BUILD_REF_NAME
-#   - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml run app flake8 .
+   - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml run app flake8 .
 
 push image:
   stage: push
@@ -52,8 +52,10 @@ push latest:
 #     - docker-compose -f docker-compose.deploy.yml down
 #     - docker-compose -f docker-compose.deploy.yml up -d
 
-# cleanup:
-#   stage: cleanup
-#   script:
-#     - docker rmi -f "$CI_PIPELINE_ID":"$CI_BUILD_REF_NAME"
-#     - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml down --remove-orphans
+# removing last image
+# if fail happens, not-finished image can remain, so we have to clen it up
+cleanup:
+  stage: cleanup
+  script:
+     - docker rmi -f "$CI_PIPELINE_ID":"$CI_BUILD_REF_NAME"
+     - docker-compose -p "$CI_PIPELINE_ID" -f docker-compose.ci.yml down --remove-orphans
