--- a/app/requirements.yml
+++ b/app/requirements.yml
@@ -10,3 +10,5 @@ dependencies:
     - django-cors-headers==2.2.0
     - django-countries==5.3
     - djangorestframework-simplejwt==3.2.3
+    - django-extensions==2.0.7
+    - Pillow==5.1.0
