--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - dev.env
     volumes:
       - database:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   app:
     image: registry.gitlab.propulsion-home.ch/full-stack/batch-2018-03/group-projects/aquarius:latest
