Configure nginx.conf file for backed and frontend.

--- a/nginx/kjaskjd.conf
+++ b/nginx/kjaskjd.conf
@@ -1,18 +1,16 @@
-# Configuration file for nginx
-
 upstream app {
   server unix:///run/app.sock; # for a file socket
 }
 server {
     listen 80;
     listen [::]:80;
-    server_name www.aquarius.propulsion-learn.ch;
-    return 301 http://aquarius.propulsion-learn.ch$request_uri;
+    server_name www.wirz-colin.propulsion-learn.ch;
+    return 301 http://wirz-colin.propulsion-learn.ch$request_uri;
 }
 server {
     listen 80;
     listen [::]:80;
-    server_name aquarius.propulsion-learn.ch;
+    server_name wirz-colin.propulsion-learn.ch;
 
     location /static/ {
         alias   /static-files/;
@@ -22,7 +20,7 @@ server {
         alias   /media-files/;
     }
 
-    location ~ /backened {
+    location ~ /backend/ {
         try_files $uri @app;
     }
 
