Fixed typo in backend in nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,7 +22,7 @@ server {
         alias   /media-files/;
     }
 
-    location ~ /backened {
+    location ~ /backend {
         try_files $uri @app;
     }
 
