--- a/prod.env
+++ b/prod.env
@@ -3,7 +3,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-DJANGO_DEBUG=False
+DJANGO_DEBUG=True
 DEFAULT_FROM_EMAIL=students@propulsionacademy.com
 EMAIL_USE_TLS=True
 EMAIL_HOST=smtp.gmail.com
