--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - database:/var/lib/postgresql/data
   app:
-    image: registry.gitlab.propulsion-home.ch/dar0n/django-rest:latest
+    image: registry.gitlab.propulsion-home.ch/full-stack/batch-2018-03/group-projects/aquarius:latest
     restart: always
     env_file:
       - prod.env
