Change static folder in the settings and nginx.conf to static-files, so they don't collapse with react static files.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     listen [::]:80;
     server_name aquarius.propulsion-learn.ch;
 
-    location /static/ {
+    location /static-files/ {
         alias   /static-files/;
     }
 
