modify nginx.conf file to allow frontend redirects

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,4 +34,12 @@ server {
     location / {
         root /frontend;
     }
+
+    location / {
+      try_files $uri @rewrites;
+    }
+
+    location @rewrites {
+      rewrite ^(.+)$ /index.html last;
+    }
 }
