modify nginx.conf file to allow frontend redirects

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,9 +31,9 @@ server {
         uwsgi_pass app;
     }
 
-    location / {
-        root /frontend;
-    }
+#    location / {
+#        root /frontend;
+#    }
 
     location / {
       try_files $uri @rewrites;
