--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,12 +31,9 @@ server {
         uwsgi_pass app;
     }
 
-#    location / {
-#        root /frontend;
-#    }
-
     location / {
       try_files $uri @rewrites;
+      root /frontend;
     }
 
     location @rewrites {
